src/objects/Checklist_Response__c.object
<CustomObject>
    <fields>
        <fullName>Checklist__c</fullName>
        <label>Checklist Item</label>
        <referenceTo>Checklist_Item__c</referenceTo>
        <relationshipLabel>Questionnaire Response</relationshipLabel>
        <relationshipName>QFOR_Checklist_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <formula>Response__r.Question__r.Question_Text_TF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response</label>
        <referenceTo>Question_Option__c</referenceTo>
        <relationshipName>QFOR_Checklist_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Checklist Response</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>